--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -28,7 +28,7 @@
         },
         "scheme-3": {
           "settings": {
-            "background": "#242833",
+            "background": "#1D4D17",
             "background_gradient": "",
             "text": "#FFFFFF",
             "button": "#FFFFFF",
@@ -58,11 +58,22 @@
             "secondary_button_label": "#FFFFFF",
             "shadow": "#121212"
           }
+        },
+        "scheme-6": {
+          "settings": {
+            "background": "rgba(0,0,0,0)",
+            "background_gradient": "",
+            "text": "#FFF",
+            "button": "#FFFFFF",
+            "button_label": "#334FB4",
+            "secondary_button_label": "#FFFFFF",
+            "shadow": "#121212"
+          }
         }
       },
-      "type_header_font": "assistant_n4",
+      "type_header_font": "cormorant_n4",
       "heading_scale": 100,
-      "type_body_font": "assistant_n4",
+      "type_body_font": "helvetica_n4",
       "body_scale": 100,
       "page_width": 1200,
       "spacing_sections": 0,
